test/tests/AmbiguousMethodReference.expected
AmbiguousMethodReference.frost:12:16: error: ambiguous reference to method 'm'. The following methods are equally good matches:
    method anonymous.BareCode.m() (AmbiguousMethodReference.frost:1:1)
    method anonymous.BareCode.m(s:frost.core.String) (AmbiguousMethodReference.frost:4:1)
    method anonymous.BareCode.m():frost.core.Object (AmbiguousMethodReference.frost:7:1)
1 error
