test/tests/AmbiguousMethodReference.frost
method m() {
}

method m(s:String) {
}

method m():Object {
    return "ok"
}

method main() {
    def ref := m
}
